kube-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempDB
  labels:
    app: tempDB
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tempDB
  template:
    metadata:
      labels:
        app: tempDB
    spec:
      containers:
      - name: tempDB
        image: <image_name/uri>:latest
        ports:
        - containerPort: 8080
